fix column spacing to match vsco-like layout

--- a/public/index.css
+++ b/public/index.css
@@ -48,7 +48,7 @@ a {
 
 .image-wrapper {
   max-width: 600px; 
-  margin: 5px;  
+  margin-bottom: 10px;  
 }
 .image-wrapper img {
   width: 100%;
